--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,40 @@
-node_modules/
-.expo/
-dist/
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
+# Dependency directories
+/node_modules
+/.expo
+/.expo-shared
 
-# macOS
+# Build output
+/build
+/android/app/build
+/ios/Pods
+/ios/build
+/coverage
+*.apk
+*.aab
+
+# Logs and debugging files
+/debug.log
+/ipc-debugger
+/logs
+
+# IDE-specific files and directories
+/.vscode
+/.idea
+
+# macOS files
 .DS_Store
 
-# Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
+# Android generated files
+/local.properties
+
+# iOS generated files
+/Pods
+/ios/Pods
+/ios/Podfile.lock
+/ios/*.xcodeproj/*.pbxproj
+/ios/*.xcworkspace
+
+# Miscellaneous
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
